...
      headline5?.fontSize
  );
  return 
    BottomNavigationBar(
          unselectedItemColor: Colors.teal,
          items: const [
          BottomNavigationBarItem(label: "Previous", icon: Icon(Icons.navigate_before)),
          BottomNavigationBarItem(label: "Next", icon: Icon(Icons.navigate_next))
          ],
          onTap: (int index) {
            if (index == 0) {
              var recipeBlock = context.read<RecipeModel>().recipeBlock;
              if (recipeBlock != null && context.read<NavigationModel>().conts.length > 1) {
                context.read<NavigationModel>().conts.removeLast();
...
                  showDialog<void>(
                  context: context,
                  builder: (BuildContext context) {
                    return AlertDialog(
                      title: const Text('WARNING!', style: TextStyle(fontFamily: 'SignikaNegative', color: Colors.teal)),
                      content: const Text(
                      'You are already on the first page', style: TextStyle(fontFamily: 'SignikaNegative', color: Colors.teal)),
                      actions: <Widget>[
                        TextButton(
                          onPressed: () {
                          Navigator.pop(context);
                          },
                          child: const Text('OK', style: TextStyle(fontFamily: 'SignikaNegative', color: Colors.teal)),
...
                 showDialog<void>(
                   context: context,
                   builder: (BuildContext context) {
                     return AlertDialog(
                       title: const Text('WARNING!', style: TextStyle(fontFamily: 'SignikaNegative', color: Colors.teal)),
                       content: const Text(
                           'You are already on the last page', style: TextStyle(fontFamily: 'SignikaNegative', color: Colors.teal)),
                       actions: <Widget>[
                         TextButton(
                           onPressed: () {
                             Navigator.pop(context);
                           },
                           child: const Text('OK', style: TextStyle(fontFamily: 'SignikaNegative', color: Colors.teal)),
...
              ),
            ),
          );
      }
      else if (recipeBlock.recipes==null){
        return Center(
            child: Text('No recipes found', style: TextStyle(fontFamily: 'SignikaNegative', color: Colors.teal)),
          ); 
      }
      else{
        List<Recipe> recipes = recipeBlock.recipes!;
        return ListView.builder(
                    itemCount: recipes.length,
...
